<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_novo_contato"
    tools:context=".view.NovoContatoActivity">

    <TextView
        android:id="@+id/textview_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <EditText
        android:id="@+id/edittext_novo_contato_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_nome"
    />

    <TextView
        android:id="@+id/textview_novo_contato_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_telefone"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_novo_contato_nome"
    />

    <EditText
        android:id="@+id/edittext_novo_contato_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_telefone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_novo_contato_telefone"
    />

    <TextView
        android:id="@+id/textView_novo_contato_fixo_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/hint_telefone_list"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_novo_contato_telefone"
        />

    <TextView
        android:id="@+id/textview_novo_contato_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_celular"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_novo_contato_fixo_info"
    />

    <EditText
        android:id="@+id/edittext_novo_contato_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_celular"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_novo_contato_celular"
    />

    <TextView
        android:id="@+id/textView_novo_contato_celular_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/hint_telefone_list"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_novo_contato_celular"
        />

    <TextView
        android:id="@+id/textView_novo_contato_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_novo_contato_celular_info"
        />

    <EditText
        android:id="@+id/edittext_novo_contato_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/textView_novo_contato_email"
    />

    <TextView
        android:id="@+id/textView_novo_contato_email_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/hint_email_list"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_novo_contato_email"
        />

    <Button
        android:id="@+id/btn_novo_contato_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>