<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetalheContatoActivity">

    <TextView
        android:id="@+id/textview_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/textview_detalhe_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        android:textColor="#000"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_nome"
    />

    <TextView
        android:id="@+id/textview_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_telefone"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_detalhe_nome"
    />

    <TextView
        android:id="@+id/textview_detalhe_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Telefone"
        android:textColor="#000"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_telefone"
    />

    <TextView
        android:id="@+id/textview_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_celular"
        android:textColor="#000"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_detalhe_telefone"
        />

    <TextView
        android:id="@+id/textview_detalhe_celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Celular"
        android:textColor="#000"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_celular"
        />

</androidx.constraintlayout.widget.ConstraintLayout>